# HaskellStuff

./: README.md  arg-test  countdown.hs  heathrowToLondon.hs  monadtest.hs  nim.hs  roguelike_notizen  roguelike_prev.cabal  rpn.hs  sqroot.hs  test.hs  test2.hs
CabalTest/: types.hs
H99Problems/: 1lists.hs  2lists.hs  3lists.hs  4arithmetic.hs  5logic.hs  6trees.hs  lists1.hs  lists2.hs  lists3.hs
IO_Zeug/: girlfriend.hs  test.hs  todo.txt
ModuleTest/: Geometry.hs  testGeo.hs
UtrechtExercises/: README.md  exercise22.hs  performance.hs  trees_note
roguelike/: .ghci  roguelike.cabal  stack.yaml
roguelike/app/: Dungeon.hs  Main.hs
todoList/: todo  todo.hs  todo.txt
