name:                roguelike
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/roguelike#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Game
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

-- Assumes Stackage LTS 8.19 or later.
-- Might work with earlier versions.
-- This cabal.config will cover you if you're using cabal-install:
-- https://www.stackage.org/lts-8.19/cabal.config

executable game
    hs-source-dirs:     app
    main-is:            Main.hs
    build-depends:      base,
                        hexes,
                        bytestring,
                        JuicyPixels,
                        file-embed,
                        transformers,
                        vector
    default-language:   Haskell2010
    other-extensions:   TemplateHaskell
    -- ghc-options:        -ddump-splices  -ddump-to-file
    -- ghc-options:        -O2
    -- ghc-options:        -optl-mwindows